Revert "Tries to fix list spacing"
This reverts commit b0cfc28eb2d26d994759f8ef68e14261954287bb.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,7 +146,3 @@ body.off-canvas-open #off-canvas-nav {
 .rotate-180 {
   transform: rotate(180deg);
 }
-
-ul {
-  margin-block-start: 0;
-}
